# commandline

./: CMakeLists.txt  README.md  articulo.docx  commandline.sln  commandline.vcxproj  makecmake.bat  ~$ticulo.docx  ~WRL0385.tmp
data/: config_01.ini  config_relaxed.ini
docs/user/: user_manual.docx  ~$er_manual.docx
include/: make_config.h
libjggconfig/: CMakeLists.txt  libjggconfig.vcxproj  libjggconfig.vcxproj.filters
libjggconfig/code/inc/: config_factory.hpp  config_ini.hpp  config_instance.hpp  msg_locale.hpp
libjggconfig/code/src/: config_factory.cpp  config_ini.cpp  config_instance.cpp  configuration.cpp
libjggconfig/include/: configuration.hpp  make_config.h
libjggconfig/lib/: libjggconfig64.idb
libjggconfig/temp/libjggconfig.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
libjggtoolsbase/: CMakeLists.txt  README.md  libjggtoolsbase.vcxproj  libjggtoolsbase.vcxproj.filters  types.hpp
libjggtoolsbase/code/inc/: array.hpp  dateImpl.hpp  datetimeImpl.hpp  datetimebase.hpp  decimalImpl.hpp  longdecimalImpl.hpp  make_config.h  msg_locale.hpp  pathImpl.hpp  timeImpl.hpp  timestamp.hpp
libjggtoolsbase/code/src/: array.cpp  byte.cpp  datatype.cpp  date.cpp  dateImpl.cpp  datetime.cpp  datetimeImpl.cpp  datetimebase.cpp  decimal.cpp  decimalImpl.cpp  exceptions.cpp  integer.cpp  logical.cpp  longdecimal.cpp  longinteger.cpp  natural.cpp  nodatatype.cpp  number.cpp  path.cpp  pathImpl.cpp  short.cpp  sstring.cpp  time.cpp  timeImpl.cpp  timestamp.cpp  type.cpp
libjggtoolsbase/include/: array.hpp  byte.hpp  datatype.hpp  datatypelist.hpp  date.hpp  datetime.hpp  decimal.hpp  exceptions.hpp  integer.hpp  jggtools.hpp  logical.hpp  longinteger.hpp  natural.hpp  nodatatype.hpp  number.hpp  path.hpp  short.hpp  sstring.hpp  time.hpp  timestamp.hpp  type.hpp  types.hpp
libjggtoolsbase/temp/libjggtoolsbase.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
libs/: libcmdline64.idb  libjggconfig64.idb  libjggtoolsbase64.idb
parserini/: Doxyfile  ini.l  lex.yy.c  lexer.h  main.c  parserini.vcxproj  parserini.vcxproj.filters
sample_c/: sample_c.c  sample_c.vcxproj
sample_cpp/: CMakeLists.txt  config.hpp  memory_leak_report.txt  sample_cpp.cpp  sample_cpp.vcxproj
sample_cpp/tmp/: sample_cpp32.exe.recipe
sample_cpp/tmp/sample_cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.write.1.tlog
sample_exception_cpp/: config.hpp  labels.hpp  sample_exception_cpp.cpp  sample_exception_cpp.vcxproj  sample_exception_cpp.vcxproj.filters  showinfo.cpp  showinfo.hpp
samples/sample_cpp/: sample_cpp.cpp  sample_cpp.vcxproj  sample_cpp.vcxproj.filters  showinfo.cpp  showinfo.hpp
samples/sample_cpp/tmp/: sample_cpp64.exe.recipe
samples/sample_cpp/tmp/sample_cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sample_cpp.lastbuildstate
samples/sample_exception_cpp/: CMakeLists.txt  sample_exception_cpp.cpp  sample_exception_cpp.vcxproj  sample_exception_cpp.vcxproj.filters  showinfo.cpp  showinfo.hpp
testCmdLine/: CMakeLists.txt  testArguments.cpp  testCall.cpp  testCmdLine.vcxproj  testConstructor.cpp  testFlags.cpp  testHelp.cpp  testOptions.cpp  testRanges.cpp  testTools.cpp  testTypes.cpp  test_config.h
testConfigFiles/: CMakeLists.txt  testConfigFiles.vcxproj
testExceptions/: testExceptions.cpp  testExceptions.vcxproj
testLibJggTools/: CMakeLists.txt  testDecimal.cpp  testLibJggTools.vcxproj
testString/: mstring.hpp  testString.cpp  testString.vcxproj  testString.vcxproj.filters
tests/testCmdLine/: TestSetValues.cpp  testCmdLine.vcxproj  testConfig.cpp  testFlags.cpp  testHelp.cpp  testOptions.cpp
tests/testConfigFiles/: testConfig.cpp  testConfigFiles.vcxproj
tests/testExceptions/: CMakeLists.txt  testExceptions.vcxproj  testStrings.cpp
tests/testLibJggTools/: testExceptions.cpp  testLibJggTools.vcxproj  testStrings.cpp
